# CryptoTrader

./: CMakeLists.txt  README.md
Header Files/: Currency.h
Source Files/: Currency.cpp
